Add term, make model driven

--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -14,7 +14,7 @@
                   [ngClass]="!loanGoals[0] ? 'p-button-outlined' : ''"
                   (click)="loanGoalSelection(0)"
                 >
-                  Cash Out
+                  More Cash Out
                 </button>
               </p>
               <p>
@@ -47,6 +47,7 @@
         <p-tabPanel header="Available Offers (4)"> </p-tabPanel>
       </p-tabView>
 
+      <!--
       <button
         class="p-button w-100 text-center d-block"
         [disabled]="isDisabled"
@@ -54,6 +55,7 @@
       >
         View Loan Products
       </button>
+      -->
     </div>
   </p-card>
 </div>
