--- a/apps/team-member/src/app/components/loan-product-builder/customer-controls/customer-controls.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/customer-controls/customer-controls.component.html
@@ -17,15 +17,15 @@
         <button
           class="p-button small"
           [ngClass]="
-            !!controlForm?.get(product.prop + '.allowRange')?.value
+            !!controlForm.get(product.prop + '.allowRange')?.value
               ? ''
               : ' p-button-outlined'
           "
           (click)="
             controlForm
-              ?.get(product.prop + '.allowRange')
+              .get(product.prop + '.allowRange')
               ?.patchValue(
-                !controlForm?.get(product.prop + '.allowRange')?.value
+                !controlForm.get(product.prop + '.allowRange')?.value
               )
           "
         >
@@ -34,24 +34,28 @@
       </div>
     </div>
     <div class="mb-3">
+      <!-- -->
       <div class="mb-3" formGroupName="userSelection">
-        @if(!!controlForm.get(product.prop + '.allowRange')?.value){
-        <p-slider
-          [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
-          [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
-          [step]="1000"
-          [range]="true"
-          [formControlName]="product.rangeProp"
-        ></p-slider>
-        } @else {
-        <p-slider
-          [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
-          [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
-          [step]="1000"
-          [formControlName]="product.prop"
-        ></p-slider>
-        }
+        <ng-container [formGroupName]="product.prop">
+          @if(!!controlForm.get(product.prop + '.allowRange')?.value){
+          <p-slider
+            [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
+            [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
+            [step]="1000"
+            [range]="true"
+            formControlName="range"
+          ></p-slider>
+          } @else {
+          <p-slider
+            [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
+            [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
+            [step]="1000"
+            formControlName="value"
+          ></p-slider>
+          }
+        </ng-container>
       </div>
+
       <div
         class="d-flex"
         style="justify-content: space-between"
@@ -70,20 +74,20 @@
         @if(!!controlForm.get(product.prop + '.allowRange')?.value){
         <div class="selected-value range">
           {{
-            controlForm.get('userSelection.' + product.rangeProp + '.0')?.value
+            controlForm.get('userSelection.' + product.prop + '.range.0')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
 
           -
           {{
-            controlForm.get('userSelection.' + product.rangeProp + '.1')?.value
+            controlForm.get('userSelection.' + product.prop + '.range.1')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
         </div>
         } @else {
         <div class="selected-value">
           {{
-            controlForm.get('userSelection.' + product.prop)?.value
+            controlForm.get('userSelection.' + product.prop + '.value')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
         </div>
