--- a/apps/team-member/src/app/components/loan-product-builder/customer-controls/customer-controls.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/customer-controls/customer-controls.component.html
@@ -41,7 +41,7 @@
           <p-slider
             [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
             [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
-            [step]="1000"
+            [step]="product.step ?? 1000"
             [range]="true"
             formControlName="range"
           ></p-slider>
@@ -49,7 +49,7 @@
           <p-slider
             [min]="controlForm.get(product.prop + '.minValue')?.value ?? 0"
             [max]="controlForm.get(product.prop + '.maxValue')?.value ?? 0"
-            [step]="1000"
+            [step]="product.step ?? 1000"
             formControlName="value"
           ></p-slider>
           }
@@ -73,23 +73,41 @@
 
         @if(!!controlForm.get(product.prop + '.allowRange')?.value){
         <div class="selected-value range">
+          @if(product.isCurrency === false) {
+          {{
+            controlForm.get('userSelection.' + product.prop + '.range.0')?.value
+          }}
+          } @else {
           {{
             controlForm.get('userSelection.' + product.prop + '.range.0')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
+          }
+          <!-- End -->
 
-          -
+          - @if(product.isCurrency === false) {
+          {{
+            controlForm.get('userSelection.' + product.prop + '.range.1')?.value
+          }}
+          } @else {
           {{
             controlForm.get('userSelection.' + product.prop + '.range.1')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
+          }
         </div>
         } @else {
         <div class="selected-value">
+          @if(product.isCurrency === false) {
+          {{
+            controlForm.get('userSelection.' + product.prop + '.value')?.value
+          }}
+          } @else {
           {{
             controlForm.get('userSelection.' + product.prop + '.value')?.value
               | currency : 'USD' : 'symbol' : '1.0-2'
           }}
+          }
         </div>
         }
 
