Add additional models

--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -39,6 +39,7 @@
             <p-accordionTab header="Customize Offer Details">
               <p>Customize your loan options further</p>
               <lib-quote-form
+                [formDefaults]="quoteFormDefaults$ | async"
                 (quoteFormChanged)="quoteFormChanged($event)"
               ></lib-quote-form>
             </p-accordionTab>
