Updates to grid

--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -46,7 +46,9 @@
             </p-accordionTab>
           </p-accordion>
         </p-tabPanel>
-        <p-tabPanel header="Available Offers (4)"> </p-tabPanel>
+        <p-tabPanel header="Available Offers">
+          <app-products></app-products>
+        </p-tabPanel>
       </p-tabView>
 
       <!--
