--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
@@ -1,4 +1,19 @@
 .loan-products-builder {
+  $brandColor: #00a39e;
+  $titleColor: #004b75;
+  @import 'libs/brand/src/styles/styles.scss';
+  .overlay {
+    background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 10;
+  }
+  .p-tabview-panel {
+    position: relative;
+  }
   .green {
     color: green;
   }
