--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -3,142 +3,146 @@
   <p-card>
     <div style="max-width: 480px; margin: auto">
       <h1>Welcome Back</h1>
-      <div class="mb-3">
-        <div class="loan-product" *ngIf="product">
-          @if(product.isSecured) {
-          <div class="collateral">Secured</div>
-          }@else {
-          <div class="collateral unsecured">Unsecured</div>
-          }
+      <p-tabView>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <lib-icons icon="money-check-alt" class="me-2"></lib-icons> Current
+            Loan Offer
+          </ng-template>
 
-          <div class="lp-wrapper">
-            <table class="table table-sm">
-              <tbody>
-                <tr>
-                  <td class="has-label">
+          <div class="loan-product p-3" *ngIf="product">
+            <div class="row">
+              <div class="col col-6">
+                <div class="lp-main">
+                  <div class="lp-details">
                     <div class="label">Cash Out</div>
                     <div class="value">
                       {{
                         product.cashOut | currency : 'USD' : 'symbol' : '1.0-2'
                       }}
                     </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="has-label">
-                    <div class="label">Loan Amount</div>
-                    <div class="value">
-                      {{
-                        product.loanAmount
-                          | currency : 'USD' : 'symbol' : '1.0-2'
-                      }}
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="has-label">
+                  </div>
+
+                  <div class="lp-details">
+                    <div class="label">Monthly Payment</div>
                     <div class="value">
                       {{
                         product.monthlyPayment
                           | currency : 'USD' : 'symbol' : '1.0-2'
                       }}
                     </div>
-                    <div class="label">Per Month</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="has-label">
-                    <div class="value">+$0 - $127</div>
+                  </div>
+
+                  <div class="lp-details">
+                    <div class="label">Monthly Savings</div>
+                    <div class="value green">+$225</div>
+                  </div>
+
+                  <div class="lp-details">
                     <div class="label">With Optional Products</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="has-label">
-                    <div class="value">+$225</div>
-                    <div class="label">Payment Impact</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="has-label">
-                    <div class="value">{{ product.term }} months</div>
-                    <div class="label">Months</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="value">{{ product.apr }}%</div>
-                    <div class="label">Rate</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="value">{{ product.apr }}%</div>
-                    <div class="label">APR</div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="value">{{ product.vehicle?.[0] }}</div>
-                    <div class="label">Vehicle</div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <button class="p-button w-100 text-center d-block">
+                    <div class="value">$0 - $127</div>
+                  </div>
+                </div>
+              </div>
+              <!--
+
+              -->
+              <div class="col col-6">
+                <div class="lp-details">
+                  <div class="label">Total Loan Amount</div>
+                  <div class="value">
+                    {{
+                      product.loanAmount | currency : 'USD' : 'symbol' : '1.0-2'
+                    }}
+                  </div>
+                </div>
+                <div class="lp-details">
+                  <div class="label">Term</div>
+                  <div class="value">{{ product.term }} Months</div>
+                </div>
+                <div class="lp-details">
+                  <div class="label">Rate</div>
+                  <div class="value">{{ product.apr }}%</div>
+                </div>
+                <div class="lp-details">
+                  <div class="label">APR</div>
+                  <div class="value">{{ product.apr }}%</div>
+                </div>
+                <div class="lp-details">
+                  <div class="label">Type</div>
+                  <div class="value">
+                    <lib-icons
+                      icon="lock"
+                      title="Secured"
+                      class="me-2"
+                    ></lib-icons>
+                    Secured
+                  </div>
+                </div>
+                <div class="lp-details">
+                  <div class="label">Vehicle</div>
+                  <div class="value">2020 RAV4</div>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <button class="p-button w-100 text-center d-block mt-3">
               <lib-icons icon="thumbsup" class="me-2"></lib-icons> Select
             </button>
           </div>
-        </div>
-      </div>
-      <p-tabView>
-        <p-tabPanel header="Customize Loan Options">
-          <p-accordion [activeIndex]="0">
-            <p-accordionTab header="See Offers Based On Goal">
-              <p>Select your loan goals</p>
-              <p>
-                <button
-                  class="p-button"
-                  [ngClass]="!loanGoals[0] ? 'p-button-outlined' : ''"
-                  (click)="loanGoalSelection(0)"
-                >
-                  More Cash Out
-                </button>
-              </p>
-              <p>
-                <button
-                  class="p-button"
-                  [ngClass]="!loanGoals[1] ? 'p-button-outlined' : ''"
-                  (click)="loanGoalSelection(1)"
-                >
-                  Improve Monthly Cash Flow
-                </button>
-              </p>
-              <p>
-                <button
-                  class="p-button"
-                  [ngClass]="!loanGoals[2] ? 'p-button-outlined' : ''"
-                  (click)="loanGoalSelection(2)"
-                >
-                  Consolidate Debt
-                </button>
-              </p>
-            </p-accordionTab>
-            <p-accordionTab header="Customize Offer Details">
-              <p>Customize your loan options further</p>
-              <lib-quote-form
-                [ranges]="ranges$ | async"
-                [formDefaults]="quoteFormDefaults$ | async"
-                (quoteFormChanged)="quoteFormChanged($event)"
-              ></lib-quote-form>
-            </p-accordionTab>
-          </p-accordion>
         </p-tabPanel>
-        <p-tabPanel header="Available Offers">
-          <app-products></app-products>
+        <p-tabPanel>
+          <ng-template pTemplate="header">
+            <lib-icons icon="cog" class="me-2"></lib-icons>Customize Loan
+            Options
+          </ng-template>
+          <p>Select your loan goals</p>
+          <p>
+            <button
+              class="p-button w-100"
+              [ngClass]="!loanGoals[0] ? 'p-button-outlined' : ''"
+              (click)="loanGoalSelection(0)"
+            >
+              More Cash Out
+            </button>
+          </p>
+          <p>
+            <button
+              class="p-button w-100"
+              [ngClass]="!loanGoals[1] ? 'p-button-outlined' : ''"
+              (click)="loanGoalSelection(1)"
+            >
+              Improve Monthly Cash Flow
+            </button>
+          </p>
+          <p>
+            <button
+              class="p-button w-100"
+              [ngClass]="!loanGoals[2] ? 'p-button-outlined' : ''"
+              (click)="loanGoalSelection(2)"
+            >
+              Consolidate Debt
+            </button>
+          </p>
+          <hr />
+          <p>Customize your loan options further</p>
+          <lib-quote-form
+            [ranges]="ranges$ | async"
+            [formDefaults]="quoteFormDefaults$ | async"
+            (quoteFormChanged)="quoteFormChanged($event)"
+          ></lib-quote-form>
         </p-tabPanel>
       </p-tabView>
 
       <!--
+          <p-accordion [activeIndex]="0">
+            <p-accordionTab header="See Offers Based On Goal">
+
+            </p-accordionTab>
+            <p-accordionTab header="Customize Offer Details">
+
+            </p-accordionTab>
+          </p-accordion>
       <button
         class="p-button w-100 text-center d-block"
         [disabled]="isDisabled"
