--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -96,7 +96,7 @@
             <lib-icons icon="cog" class="me-2"></lib-icons>Customize Loan
             Options
           </ng-template>
-          <p>Select your loan goals</p>
+          <h3>Select your loan goals</h3>
           <p>
             <button
               class="p-button w-100"
@@ -125,7 +125,27 @@
             </button>
           </p>
           <hr />
-          <p>Customize your loan options further</p>
+          <h3>Available Vehicles</h3>
+          <table class="table table-striped table-hover w-100">
+            <tbody>
+              <tr class="clickable">
+                <td>
+                  <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
+                </td>
+                <td>2020 TOYOTA RAV4</td>
+                <td>$36,000</td>
+              </tr>
+              <tr class="clickable">
+                <td>
+                  <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
+                </td>
+                <td>2010 CHEVROLET SILVERADO</td>
+                <td>$10,905</td>
+              </tr>
+            </tbody>
+          </table>
+          <hr />
+          <h3>Customize loan options</h3>
           <lib-quote-form
             [ranges]="ranges$ | async"
             [formDefaults]="quoteFormDefaults$ | async"
