--- a/libs/brand/src/styles/global/buttons.scss
+++ b/libs/brand/src/styles/global/buttons.scss
@@ -4,6 +4,7 @@
   text-align: center;
   display: block;
   width: 100%;
+  text-decoration: none;
   @media (min-width: 768px) {
     width: initial;
     display: initial;
