--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -74,14 +74,16 @@
                     <lib-icons
                       icon="lock"
                       title="Secured"
-                      class="me-2"
+                      class="me-1"
                     ></lib-icons>
                     Secured
                   </div>
                 </div>
                 <div class="lp-details">
                   <div class="label">Vehicle</div>
-                  <div class="value">2020 RAV4</div>
+                  <div class="value">
+                    <lib-icons icon="car" class="me-1"></lib-icons> 2020 RAV4
+                  </div>
                 </div>
               </div>
             </div>
@@ -96,56 +98,7 @@
             <lib-icons icon="cog" class="me-2"></lib-icons>Customize Loan
             Options
           </ng-template>
-          <h3>Select your loan goals</h3>
-          <p>
-            <button
-              class="p-button w-100"
-              [ngClass]="!loanGoals[0] ? 'p-button-outlined' : ''"
-              (click)="loanGoalSelection(0)"
-            >
-              More Cash Out
-            </button>
-          </p>
-          <p>
-            <button
-              class="p-button w-100"
-              [ngClass]="!loanGoals[1] ? 'p-button-outlined' : ''"
-              (click)="loanGoalSelection(1)"
-            >
-              Improve Monthly Cash Flow
-            </button>
-          </p>
-          <p>
-            <button
-              class="p-button w-100"
-              [ngClass]="!loanGoals[2] ? 'p-button-outlined' : ''"
-              (click)="loanGoalSelection(2)"
-            >
-              Consolidate Debt
-            </button>
-          </p>
-          <hr />
-          <h3>Available Vehicles</h3>
-          <table class="table table-striped table-hover w-100">
-            <tbody>
-              <tr class="clickable">
-                <td>
-                  <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                </td>
-                <td>2020 TOYOTA RAV4</td>
-                <td>$36,000</td>
-              </tr>
-              <tr class="clickable">
-                <td>
-                  <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                </td>
-                <td>2010 CHEVROLET SILVERADO</td>
-                <td>$10,905</td>
-              </tr>
-            </tbody>
-          </table>
-          <hr />
-          <h3>Customize loan options</h3>
+
           <lib-quote-form
             [ranges]="ranges$ | async"
             [formDefaults]="quoteFormDefaults$ | async"
