--- a/libs/quote-calculator/src/lib/quote-form/quote-form.component.html
+++ b/libs/quote-calculator/src/lib/quote-form/quote-form.component.html
@@ -3,7 +3,72 @@
   class="quote-form"
   *ngIf="{ ranges: ranges$ | async } as comp"
 >
+  <h3 class="mt-0">
+    <lib-icons icon="bullseye" class="me-2"></lib-icons> Select Your Loan Goals
+  </h3>
+  <p>
+    <button
+      class="p-button w-100"
+      (click)="quoteFrm.get('loanGoal')?.patchValue('cashOut')"
+      [ngClass]="
+        quoteFrm.value.loanGoal === 'cashOut' ? '' : 'p-button-outlined'
+      "
+    >
+      More Cash Out
+    </button>
+  </p>
+  <p>
+    <button
+      class="p-button w-100"
+      (click)="quoteFrm.get('loanGoal')?.patchValue('cashFlow')"
+      [ngClass]="
+        quoteFrm.value.loanGoal === 'cashFlow' ? '' : 'p-button-outlined'
+      "
+    >
+      Improve Monthly Cash Flow
+    </button>
+  </p>
+  <p>
+    <button
+      class="p-button w-100"
+      (click)="quoteFrm.get('loanGoal')?.patchValue('debt')"
+      [ngClass]="quoteFrm.value.loanGoal === 'debt' ? '' : 'p-button-outlined'"
+    >
+      Consolidate Debt
+    </button>
+  </p>
+
+  <h3><lib-icons icon="car" class="me-2"></lib-icons> Available Vehicles</h3>
+  <table class="table table-striped table-hover w-100" formArrayName="vehicles">
+    <tbody>
+      <tr class="clickable">
+        <td>
+          <p-checkbox
+            [binary]="true"
+            inputId="binary"
+            formControlName="0"
+          ></p-checkbox>
+        </td>
+        <td>2020 TOYOTA RAV4</td>
+        <td>$36,000</td>
+      </tr>
+      <tr class="clickable">
+        <td>
+          <p-checkbox
+            [binary]="true"
+            inputId="binary"
+            formControlName="1"
+          ></p-checkbox>
+        </td>
+        <td>2010 CHEVROLET SILVERADO</td>
+        <td>$10,905</td>
+      </tr>
+    </tbody>
+  </table>
   <!---->
+  <h3>
+    <lib-icons icon="cog" class="me-2"></lib-icons> Customize Loan Options
+  </h3>
   <div class="quote-selector">
     <p class="label">Cash Out</p>
     <p class="value">
