--- a/apps/customer/src/app/routes/quote/quote.component.scss
+++ b/apps/customer/src/app/routes/quote/quote.component.scss
@@ -23,6 +23,7 @@
   .lp-main {
     background: rgba(0, 0, 0, 0.035);
     padding: 0.5rem;
+    min-height: 275px;
     .label {
     }
     .value {
